--- a/SFMLGE Local deps/SFMLGE Local deps.csproj
+++ b/SFMLGE Local deps/SFMLGE Local deps.csproj
@@ -13,7 +13,7 @@
 
   <ItemGroup>
     <Content Include="Res\waveshader.frag">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
