Stable! just missing the actual editing part but we will get there, also lots of GUIScroller fixes

--- a/SFMLGE Local deps/SFMLGE Local deps.csproj
+++ b/SFMLGE Local deps/SFMLGE Local deps.csproj
@@ -90,4 +90,8 @@
     <Folder Include="Scripts\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NCalcSync" Version="3.11.0" />
+  </ItemGroup>
+
 </Project>
