The GUI Update (and other new stuff):
The GUI system now functions alot closer to how Unity/Roblox does it
each GUI object has a UDim2 with an Offset and a Scale.
All GUI Components are derived from GUIPanel.
GUI Components are expected to be added to seperate game objects, and will look in their parents for other GUIComponents to base their scale and size on

New GUI Components!
- GUIPanel
- GUIButton
- GUIInputBox
- GUIInteractiveWindow
- GUIList
- GUIEditor (WIP still)

AnimatedFrames, a class that holds a bunch of frames, and takes care of managing
going through them at a given FPS.

makes Vector2 more consistent, readonly added to all non-static Vector2 methods

MathGE.ZeroSin() added, its just sin from 0-1

Project:
- Project.IsMouseButtonHeld(Mouse.Button button)
- Project.IsMouseButtonPressed(Mouse.Button button)
- Project.IsMouseButtonReleased(Mouse.Button button)
- event Project.OnMouseButtonHeld added
- event Project.OnMouseButtonPressed added
- event Project.OnMouseButtonReleased added

Resource Changes:
- resources keep count on load requests,
- TextureResource size exception caught,
- TextureResource descriptions for upcoming EditorGUI,

BoundBox:
BoundBox is a wraper for FloatRect, get in GUIComps with .GetBounds()
- BoundBox.WithinBounds(Vector2 point) returns true if a point is within bounds

AnimatedTexture becomes deprecated

GameObject:
- GameObjects will now remove themselfs from old parents when moved to new ones.
- GameObject.GetChildren() added
- GameObject.GetComponentOfSubclass<T>() added
- GameObject.GetComponentOfSubclassOnly<T>() added

Scene:
- event Scene.OnStart(Scene) added
- Scene.CreateGameObject() now accepts no name or an empty string

--- a/SFMLGE Local deps/SFMLGE Local deps.csproj
+++ b/SFMLGE Local deps/SFMLGE Local deps.csproj
@@ -2,9 +2,10 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net6.0-windows10.0.22621.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <SupportedOSPlatformVersion>8.0</SupportedOSPlatformVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -29,7 +30,13 @@
     <None Update="openal32.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Res\devtext.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Res\funny.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Res\largeImgTest.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Res\thenerve.png">
@@ -38,12 +45,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Res\" />
     <Folder Include="Scripts\" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="SFML.Net" Version="2.5.1" />
+    <PackageReference Include="SFML.Net" Version="2.6.0" />
   </ItemGroup>
 
 </Project>
