--- a/SFMLGE Local deps/SFMLGE Local deps.csproj
+++ b/SFMLGE Local deps/SFMLGE Local deps.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="LiteNetLib" Version="1.2.0" />
     <PackageReference Include="SFML.Net" Version="2.6.0" />
   </ItemGroup>
 
