Basis for particle systems, needs some cleanup but is mostly stable Project.GetScene() added Internal used properly in some spaces now

--- a/SFMLGE Local deps/SFMLGE Local deps.csproj
+++ b/SFMLGE Local deps/SFMLGE Local deps.csproj
@@ -19,6 +19,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Res\**" />
+    <EmbeddedResource Remove="Res\**" />
+    <None Remove="Res\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="Engine\Font\monogram.ttf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -41,7 +47,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Res\" />
+    <Folder Include="Engine\Collision\" />
   </ItemGroup>
 
 </Project>
