--- a/SFMLGE Local deps/SFMLGE Local deps.csproj
+++ b/SFMLGE Local deps/SFMLGE Local deps.csproj
@@ -19,27 +19,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Engine\Font\**" />
     <Compile Remove="Res\**" />
+    <EmbeddedResource Remove="Engine\Font\**" />
     <EmbeddedResource Remove="Res\**" />
+    <None Remove="Engine\Font\**" />
     <None Remove="Res\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Engine\Font\monogram.ttf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Engine\Font\Roboto-Light.ttf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-	  <None Update="Engine\Font\Roboto-Regular.ttf">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </None>
-    <None Update="Engine\Font\Roboto-Thin.ttf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Engine\Font\unifont.bmp">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
   <ItemGroup>
@@ -47,7 +32,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Engine\Collision\" />
+    <None Update="Roboto-Regular.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
