--- a/SFML-GE/SFML-GE.csproj
+++ b/SFML-GE/SFML-GE.csproj
@@ -36,14 +36,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-	  <EmbeddedResource Include="Roboto-Regular.ttf">
-		  <Pack>True</Pack>
-		  <PackagePath>\</PackagePath>
-		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-	  </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="SFML.Net" Version="2.6.0" />
   </ItemGroup>
 
@@ -63,6 +55,9 @@
     <None Update="readmenuget.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
+    </None>
+    <None Update="Res\Roboto-Regular.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
