--- a/SFML-GE/SFML-GE.csproj
+++ b/SFML-GE/SFML-GE.csproj
@@ -7,7 +7,7 @@
     <Nullable>enable</Nullable>
     <PackageId>SFML-GE</PackageId>
     <Title>SFML-Game Engine</Title>
-    <Version>0.60.2</Version>
+    <Version>0.70.0</Version>
     <Authors>Timothy Anderson</Authors>
     <Description>A 2D Only Game Engine built on top of SFML.Net, Featuring a syntax close to unity's</Description>
     <PackageProjectUrl>https://github.com/ThatGuy-GEWP/SFML-GE</PackageProjectUrl>
@@ -22,7 +22,7 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageReadmeFile>readmenuget.md</PackageReadmeFile>
     <PackageTags>game engine,sfml.net,sfml,2D</PackageTags>
-	<PackageReleaseNotes>Rich text fixes, Delegates can be added to RenderQueue, Styling guide added to GUI objects</PackageReleaseNotes>
+	<PackageReleaseNotes>Gizmos, better sound playing, RichText upgrades, StylingDef, Mouse Blockers, BoundBox upgrades, Camera fixes, and more.</PackageReleaseNotes>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 	
